fix vari